Bug 491506 - plasma-desktop-6.1.4 w/ clang-19: kcms/libkwindevices/inputdevice.h:171:19: error: reference to non-static member function must be called
Summary: plasma-desktop-6.1.4 w/ clang-19: kcms/libkwindevices/inputdevice.h:171:19: e...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.1.4
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-10 03:19 UTC by zachariah.cabelly
Modified: 2024-08-30 04:20 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.5
Sentry Crash Report:


Attachments
build.log from Portage (147.40 KB, text/x-log)
2024-08-10 03:19 UTC, zachariah.cabelly
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zachariah.cabelly 2024-08-10 03:19:11 UTC
Created attachment 172461 [details]
build.log from Portage

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
On Plasma 6.1.4, the kde-plasma/plasma-desktop (with the package name, you already should know I use Gentoo) package fails to build with Clang 19

STEPS TO REPRODUCE
1. Attempt to build =kde-plasma/plasma-desktop-6.1.4
2. Watch it fail
3. Wallow in misery

OBSERVED RESULT
Build failed due to a malformed header file

EXPECTED RESULT
A successful build, as I had built previous versions of Plasma.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo Linux 2.15 running on Linux 6.10.3-linux-cachyos
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION

I'm using Clang 19.1.0_rc2, so that could be the issue.
Comment 1 Bug Janitor Service 2024-08-10 17:19:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2429
Comment 2 fanzhuyifan 2024-08-12 16:47:21 UTC
Original gentoo report: https://bugs.gentoo.org/937471
Comment 3 fanzhuyifan 2024-08-20 16:45:47 UTC
Git commit 02726a1ca0189f71f46513078cbc82af9daa9425 by Yifan Zhu.
Committed on 20/08/2024 at 16:38.
Pushed by fanzhuyifan into branch 'master'.

kcms/libkwindevices: use function value instead of function

Prop<T> p.value is a function. We should call set on its return value,
instead of on the function pointer.

M  +1    -1    kcms/libkwindevices/inputdevice.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/02726a1ca0189f71f46513078cbc82af9daa9425
Comment 4 Nate Graham 2024-08-30 04:20:15 UTC
Git commit 83fbffd273ce7b6e5f5307e9fab540446b9f88c9 by Nate Graham, on behalf of Yifan Zhu.
Committed on 30/08/2024 at 03:51.
Pushed by ngraham into branch 'Plasma/6.1'.

kcms/libkwindevices: use function value instead of function

Prop<T> p.value is a function. We should call set on its return value,
instead of on the function pointer.


(cherry picked from commit 02726a1ca0189f71f46513078cbc82af9daa9425)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>

M  +1    -1    kcms/libkwindevices/inputdevice.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/83fbffd273ce7b6e5f5307e9fab540446b9f88c9