kcms/libkwindevices: use function value instead of function

Prop<T> p.value is a function. We should call set on its return value,
instead of on the function pointer.

BUG: 491506


(cherry picked from commit 02726a1ca0189f71f46513078cbc82af9daa9425)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>